--- a/Isi.ShoppingApp.Presentation/Views/LoginView.xaml
+++ b/Isi.ShoppingApp.Presentation/Views/LoginView.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="Isi.ShoppingApp.Presentation.Views.Login"
+﻿<Window x:Class="Isi.ShoppingApp.Presentation.Views.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Isi.ShoppingApp.Presentation.Views"
         mc:Ignorable="d"
-        Title="Shopping App" Height="161" Width="252" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Shopping App" Height="161" Width="252" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        x:Name="LoginViewWindow">
     <Window.Resources>
         <Style TargetType="Separator">
             <Setter Property="Width" Value="10"/>
@@ -30,14 +31,16 @@
                     <TextBox  x:Name="UsernameNameTextBox" 
                          HorizontalAlignment="Left"
                               Width="100" Height="25"
-                              MaxLength="12"/>
+                              MaxLength="12"
+                              Text="{Binding Path=UserNameText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Password"/>
                     <PasswordBox x:Name="PasswordTextBox" 
                          HorizontalAlignment="Left"
                          Width="100" Height="25"
-                         MaxLength="12"/>
+                         MaxLength="12"
+                          KeyUp="PasswordTextBox_KeyUp"       />
                 </DockPanel>
             </StackPanel>
 
