--- a/Isi.ShoppingApp.Presentation/Views/PurchaseWindow.xaml
+++ b/Isi.ShoppingApp.Presentation/Views/PurchaseWindow.xaml
@@ -6,11 +6,35 @@
         xmlns:local="clr-namespace:Isi.ShoppingApp.Presentation.Views"
         mc:Ignorable="d"
         Title="Shopping App" Height="450" Width="800"
-        x:Name="PuchaseWindow">
+        x:Name="PuchaseWindow"
+        WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        <Style TargetType="Separator">
+            <Setter Property="Width" Value="10"/>
+            <Setter Property="Height" Value="10"/>
+            <Setter Property="Opacity" Value="0"/>
+        </Style>
+        <Style TargetType="Label">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="MinWidth" Value="120"/>
+            <Setter Property="MaxWidth" Value="100"/>
+            <Setter Property="Height" Value="25"/>
+        </Style>
+    </Window.Resources>
     <DockPanel DockPanel.Dock="Top" Background="White" Margin="15">
         <StackPanel>
             <local:HeaderView />
             <local:ProductsGridView />
+            <local:AddToCartView/>
         </StackPanel>
     </DockPanel>
 </Window>
