--- a/Isi.ShoppingApp.Presentation/Views/CheckoutView.xaml
+++ b/Isi.ShoppingApp.Presentation/Views/CheckoutView.xaml
@@ -44,7 +44,7 @@
                        Grid.Row="0" Grid.Column="0"/>
                         <Label x:Name="SubtotalLabel"
                        HorizontalAlignment="Left"
-                       Content="{Binding Path=Subtotal, FallbackValue='$0.00', StringFormat='{}{0:c}'}"
+                       Content="{Binding Path=Cart.Subtotal, FallbackValue='$0.00', StringFormat='{}{0:c}', UpdateSourceTrigger=PropertyChanged}"
                        Grid.Row="0" Grid.Column="1"/>
                         <Label x:Name="TitleDiscountLabel"
                        HorizontalAlignment="Left"
@@ -53,7 +53,7 @@
                        Grid.Row="1" Grid.Column="0"/>
                         <Label x:Name="DiscountLabel"
                        HorizontalAlignment="Left"
-                       Content="{Binding Path=Discount, FallbackValue='$0.00', StringFormat='{}{0:c}'}"
+                       Content="{Binding Path=Cart.Discount, FallbackValue='$0.00', StringFormat='{}{0:c}', UpdateSourceTrigger=PropertyChanged}"
                        Grid.Row="1" Grid.Column="1"/>
                         <Label x:Name="TitleTaxLabel"
                        HorizontalAlignment="Left"
@@ -62,7 +62,7 @@
                        Grid.Row="2" Grid.Column="0"/>
                         <Label x:Name="TaxesLabel"
                        HorizontalAlignment="Left"
-                       Content="{Binding Path=Taxes, FallbackValue='$0.00', StringFormat='{}{0:c}'}"
+                       Content="{Binding Path=Cart.Taxes, FallbackValue='$0.00', StringFormat='{}{0:c}', UpdateSourceTrigger=PropertyChanged}"
                        Grid.Row="2" Grid.Column="1"/>
                         <Label x:Name="TitleTotalLabel"
                        HorizontalAlignment="Left"
